--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             </div>
         </div>
     </div>
-    <script src="./app.js"></script>
+    <script src="./app.js" type="module"></script>
 </body>
 
 </html>
